--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,12 @@
-# Redirect HTTP to HTTPS
 server {
     listen 80;
     server_name languages.bambuddy.cool;
     return 301 https://$server_name$request_uri;
+
+    location ~ /\.git {
+      deny all;
+      return 404;
+    }
 }
 
 # HTTPS server
@@ -34,13 +38,13 @@ server {
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml text/javascript;
     gzip_min_length 1000;
 
-    # Cache static assets (JS, CSS, images)
+    # Cache static assets
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
 
-    # SPA fallback - serve index.html for all routes
+    # SPA fallback
     location / {
         try_files $uri $uri/ /index.html;
     }
@@ -48,5 +52,9 @@ server {
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
+
+    location ~ /\.git {
+      deny all;
+      return 404;
+    }
 }
